# cross-lang-verifier

./: .gitignore  .pre-commit-hooks.yaml  API.md  CAPABILITIES.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  State.json  coverage_floor.json  critiques.json  depth_improvement_plan.json  groundings.json  mkdocs.yml  novelty_pivot.json  pyproject.toml  requirements-docs.txt  review_aniruddha_sinha.md  review_anya_petrov.md  review_elena_vasquez.md  review_joseph_s_chang.md  review_lila_zhang.md  review_marcus_chen.md  setup.py  tool_paper.tex
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: QUARANTINE.md  real_benchmark_results.json  sota_benchmark.py  sota_benchmark_simple.py
docs/: ARTIFACT.md  COMPLETENESS.md  DISCLOSURE_TEMPLATE.md  FRONTENDS.md  IR.md  LSP.md  MECHANIZED_SOUNDNESS.md  PLAYGROUND.md  POSITIONING.md  PRE_REVIEW.md  PRODUCT_PROGRAM.md  SDK.md  SEMANTICS.md  SOUNDNESS_COMPENDIUM.md  TRACEABILITY.md  TRANSLATION_VALIDATION.md  TRANSPILER_RECIPES.md  adversarial_corpus.md  arch_replay.md  architecture.md  bug_intake.md  bug_regression_corpus.md  case_studies.md  continuous_corpus_ci.md  corpus_datasheet.md  disclosures.md  divergence_findings.md  fast_math.md  figures.md  float_cast.md  gallery.md  generated_scale_section.tex  index.md  large_scale_study.md  launch.md  leaderboard.md  negative_corpus.md  pointer_provenance.md  pre_commit.md  problem_statement.md  (+6 more)
examples/: __init__.py  c2rust_verify.py  fuzz_demo.py  overflow_demo.py  readme_demo_units.json  simple_verify.py  simple_verify_results.json  units_manifest.json
experiments/: ablation_study.py  cegar_llm_experiment.py  k_sensitivity_experiment.py  llm_translation_experiment.py  pbt_baseline_experiment.py  pipeline_verify.py  pointer_struct_experiment.py  real_clib_experiment.py  real_world_c2rust_evaluation.py  real_world_experiment.py  run_cegar_ub_experiment.py  run_comprehensive_benchmark.py  run_e2e_experiments.py  run_experiments.py  run_paper_experiments.py  scaled_cegar_experiment.py  statistical_analysis.py  ub_invisible_benchmark.py  ub_invisible_results.json
formal/: .gitignore  CompletenessBoundary.lean  CoreSoundness.v  HashStability.lean  ProductSoundness.lean  SPIContract.lean  VerifiedChecker.lean  lake-manifest.json  lakefile.lean
ideation/: approach_debate.md  approaches.md  theory_eval_community_expert.md  theory_eval_skeptic.md
implementation/: README.md  setup.py
integrations/: api_surface_v1.json  cargo-cross-lang-verify  cargo-cross-verify
real_benchmarks/: benchmark_results.json  run_real_pairs_benchmark.py
scripts/: build_demo_video.py  build_readme_demo.py  check_no_simulated_results.sh  cold_start_ci.py  coverage_gate.py  reproduce_kit.sh  test_ratchet.py  validate_launch_readiness.py  verify_packaging.sh
src/: abi_compatibility_checker.py  api_surface_analyzer.py  c2rust_integration.py  c_parser.py  c_to_rust_translator.py  cegar_engine.py  differential_tester.py  equivalence_checker.py  ffi_verifier.py  incremental_verify.py  language_support.py  memory_safety_verifier.py  project_scanner.py  rust_parser.py  semrec_cli.py  type_mapping.py  undefined_behavior_detector.py  verification_report.py
tests/: conftest.py  green_baseline.json  test_adversarial_corpus.py  test_analysis.py  test_arch_replay.py  test_atomic_ordering_oracle.py  test_bug_intake.py  test_bug_regression_corpus.py  test_c2rust_corpus.py  test_c_frontend.py  test_cache_equivalence.py  test_cold_start_ci.py  test_continuous_corpus_ci.py  test_coq_crosscheck.py  test_corpus_datasheet.py  test_demo_video.py  test_distributed_manifest.py  test_divergence_findings.py  test_existing_tools_study.py  test_flaky_toolchain.py  test_formal_spi_contract.py  test_fuzzer.py  test_generalization_v2_pair_soundness.py  test_github_action.py  test_github_port_miner.py  test_hash_stability.py  test_historical_cve_corpus.py  test_idiomatic_port_expansion.py  test_integration.py  test_ir_builder.py  test_ir_instructions.py  test_ir_types.py  test_ir_validator.py  test_large_scale_study.py  test_launch_readiness.py  test_leaderboard.py  test_llm_scale_study.py  test_lsp.py  test_mechanized_completeness_boundary.py  test_memcpy_overlap_oracle.py  (+37 more)
theory/: paper.tex  tool_paper.tex  tool_paper_backup.tex  tool_paper_backup2.tex  tool_paper_backup3.tex  tool_paper_new.tex  (+1 more)
(+506 files in other folders)
